kubernetes/postgres.n8n.k8s.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: data-stores

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-n8n
  namespace: data-stores
spec:
  ports:
    - name: exposed-port
      port: 80
      protocol: TCP
      targetPort: main-port
  selector:
    comicrelief.com/part-of: postgres-n8n
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: data-stores
spec:
  replicas: 1
  selector:
    matchLabels:
      comicrelief.com/part-of: postgres-n8n
  template:
    metadata:
      labels:
        comicrelief.com/part-of: postgres-n8n
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: postgres-secrets
                optional: false
          image: docker.io/library/postgres:17
          imagePullPolicy: Always
          name: postgres
          ports:
            - containerPort: 5432
              name: main-port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pvc
              readOnly: false
              subPathExpr: "postgres"
      restartPolicy: Always
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-n8n-pvc
            readOnly: false
