kubernetes/n8n.k8s.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: comic-n8n

---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: comic-n8n
spec:
  ports:
    - name: exposed-port
      port: 80
      protocol: TCP
      targetPort: main-port
  selector:
    comicrelief.com/part-of: n8n
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: comic-n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      comicrelief.com/part-of: n8n
  template:
    metadata:
      labels:
        comicrelief.com/part-of: n8n
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: n8n-secrets
                optional: false
            - configMapRef:
                name: n8n-cm
                optional: false
          image: docker.n8n.io/n8nio/n8n
          imagePullPolicy: Always
          name: n8n
          ports:
            - containerPort: 5678
              name: main-port
          volumeMounts:
            - mountPath: "/home/node/.n8n"
              name: n8n-pvc
              readOnly: false
              subPathExpr: "n8n"
          resources:
            requests:
              memory: "250Mi"
            limits:
              memory: "500Mi"
      restartPolicy: Always
      volumes:
        - name: n8n-pvc
          persistentVolumeClaim:
            claimName: n8n-pvc
            readOnly: false
      securityContext:
        fsGroup: 1000 # n8n container runs as non root `node` user so run as node user (1000) to access volume

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata: # add Kong plugin features via annotations: https://docs.konghq.com/kubernetes-ingress-controller/latest/plugins/mtls/
  name: comic-n8n-http-route
  namespace: comic-n8n
spec:
  parentRefs:
    - name: kong-gateway
      namespace: kong-system
  rules:
    - backendRefs: # https://gateway-api.sigs.k8s.io/api-types/httproute/#backendrefs-optional
        - group: ""
          kind: Service
          name: n8n
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
